--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "dependencies": {
     "discord.js": "^14.14.1",
+    "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
     "r6s-stats-api": "^1.3.0"
   },
   "name": "r6trackerbot",
   "version": "1.0.0",
-  "main": "index.js",
-  "devDependencies": {},
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bot": "node ."
   },
   "keywords": [],
   "author": "",
